[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "src/day-01.rs"

[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"

[dependencies]
indoc = "1.0.7"
itertools = "0.10.5"
once_cell = "1.16.0"
