[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "src/day-01.rs"

[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"

[[bin]]
name = "day-05"
path = "src/day-05.rs"

[[bin]]
name = "day-06"
path = "src/day-06.rs"

[[bin]]
name = "day-07"
path = "src/day-07.rs"

[[bin]]
name = "day-08"
path = "src/day-08.rs"

[[bin]]
name = "day-09"
path = "src/day-09.rs"

[[bin]]
name = "day-10"
path = "src/day-10.rs"

[[bin]]
name = "day-11"
path = "src/day-11.rs"

[dependencies]
indoc = "1.0.7"
itertools = "0.10.5"
nom = "7.1.1"
once_cell = "1.16.0"
regex = "1.7.0"
